--- a/index.html
+++ b/index.html
@@ -1,43 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Title</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css" />
     <script src="https://cdn.bootcss.com/socket.io/2.2.0/socket.io.dev.js"></script>
-</head>
-<body>
-<div>请用方向键和空格键进行操作：上->旋转，左->左移，右->右移，下->下移，空格->坠落</div>
-<div id ='waiting'></div>
-<div class="square" id="local">
-    <div class="title">我的游戏区域</div>
-    <div class="game" id="local_game"></div>
-    <div class="next" id="local_next"></div>
-    <div class="info">
+  </head>
+  <body>
+    <div>
+      请用方向键和空格键进行操作：上->旋转，左->左移，右->右移，下->下移，空格->坠落
+    </div>
+    <div id="waiting"></div>
+    <div class="square" id="local">
+      <div class="title">我的游戏区域</div>
+      <div class="game" id="local_game"></div>
+      <div class="next" id="local_next"></div>
+      <div class="info">
         <div>已用时: <span id="local_time">0</span>S</div>
         <div>已得分: <span id="local_score">0</span>分</div>
         <div id="local_gameover"></div>
+      </div>
     </div>
-</div>
 
-<div class="square" id="remote">
-    <div class="title">对方游戏区域</div>
-    <div class="game" id="remote_game"></div>
-    <div class="next" id="remote_next"></div>
-    <div class="info">
+    <div class="square" id="remote">
+      <div class="title">对方游戏区域</div>
+      <div class="game" id="remote_game"></div>
+      <div class="next" id="remote_next"></div>
+      <div class="info">
         <div>已用时: <span id="remote_time">0</span>S</div>
         <div>已得分: <span id="remote_score">0</span>分</div>
         <div id="remote_gameover"></div>
-
+      </div>
     </div>
-</div>
 
-<script src="js/game.js"></script>
-<script src="js/remote.js"></script>
-<script src="js/local.js"></script>
-<script src="js/square.js"></script>
-<script src="js/squareFactory.js"></script>
-<script src="js/script.js"></script>
-
-</body>
+    <script src="js/game.js"></script>
+    <script src="js/remote.js"></script>
+    <script src="js/local.js"></script>
+    <script src="js/square.js"></script>
+    <script src="js/squareFactory.js"></script>
+    <script src="js/script.js"></script>
+  </body>
 </html>
